# AlphaBetaLogic

./: .gitignore  README.md  krz_parser.py  main.py  metoda_tablic.py  metoda_tablic_z_indexami.py  networkx_test.py  odgarbacza.py  parse_tree.gv  parsetab.py  pyproject.toml  rekurencja.py  requirements.txt  tautolgie.py  test.py
other/: metoda_tablic.py
src/alphabetalogic/: __init__.py  formula.py  parser.out  parser.py  tableaux.py  tableaux_expander.py  utils.py
tests/: logical_expressions_samples.txt  test_main.py  test_parser.py  test_tableaux_expander.py
tests/test_data/: test_logical_expressions.txt
tests/test_utils/: load_test_samples.py
